--- a/login/web_login.html
+++ b/login/web_login.html
@@ -28,7 +28,7 @@
                         <label for=""><input type="checkbox">Recordarme <a href="#">Olvidé la contraseña</a></label>
                         
                     </div>
-                    <button>Entrar</button>
+                    <button class="button">Entrar</button>
                     <div class="register">
                         <label for="">No tengo una cuenta <a href="#">Registrarme</a></label>
                         
@@ -39,6 +39,7 @@
     </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
